# calendar_ingest

./: .env.example  .gitignore  README.md  pyproject.toml
checkpoints/20260618T170252Z_after_tucson_pause/: README.md  completed_cities.csv  pending_queue_head.csv  status.json
config/: default.yaml  priority_cities.yml
src/music_calendar_finder/: classify.py  cli.py  config.py  db.py  dedupe.py  exporter.py  importer.py  maintenance.py  metadata.py  models.py  pipeline.py  priority.py  quality.py  query_builder.py  queue.py  reporting.py  score.py  utils.py  validation.py  workbook_qa.py
src/music_calendar_finder/crawl/: __init__.py  fetcher.py  link_extractor.py  robots.py
src/music_calendar_finder/search/: __init__.py  base.py  serpapi.py
tests/: test_classify_score.py  test_crawl.py  test_db.py  test_dedupe.py  test_exporter_reporting_pipeline.py  test_importer.py  test_phase4_exports.py  test_phase5_batch_readiness.py  test_phase6_quality.py  test_phase7_quality.py  test_query_builder.py  test_queue.py  test_search_serpapi.py  test_validation.py
