[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "music-calendar-source-finder"
version = "0.1.0"
description = "Local CLI automation for discovering music and culture calendar source pages by city."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "typer>=0.12",
  "pydantic>=2",
  "pandas>=2",
  "openpyxl>=3.1",
  "httpx>=0.27",
  "beautifulsoup4>=4.12",
  "python-dotenv>=1",
  "pyyaml>=6",
  "tenacity>=8",
  "rich>=13",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
]

[project.scripts]
music-calendar-finder = "music_calendar_finder.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

